kubernetes/aks-ingress/command-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speech-command-http-api-ingress
  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  # tls:
  #   - hosts:
  #     - kubernetes.docker.com
  #     secretName: logcorner-ingress-tls
  rules:
    # - host: kubernetes.docker.com
  - http:
      paths:
      - path: /speech-command-http-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: speech-command-http-api-service
            port:
              number: 80
